// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the GradientOverlayImage component should render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#A5A5A5",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    fadeDuration={250}
    onLoad={[Function]}
    source={
      Array [
        Object {
          "cache": "force-cache",
          "height": 400,
          "uri": "https://picsum.photos/600/400/?random",
          "width": 600,
        },
      ]
    }
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`the GradientOverlayImage component should render with an overlayColor 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#A5A5A5",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    fadeDuration={250}
    onLoad={[Function]}
    source={
      Array [
        Object {
          "cache": "force-cache",
          "height": 400,
          "uri": "https://picsum.photos/600/400/?random",
          "width": 600,
        },
      ]
    }
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <BVLinearGradient
    colors={
      Array [
        16416882,
        4294606962,
      ]
    }
    endPoint={
      Object {
        "x": 0,
        "y": 1,
      }
    }
    locations={
      Array [
        0.5,
        1,
      ]
    }
    overlayColor="salmon"
    overlayType="default"
    startPoint={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`the GradientOverlayImage component should render with overlayType.featured 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#A5A5A5",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    fadeDuration={250}
    onLoad={[Function]}
    source={
      Array [
        Object {
          "cache": "force-cache",
          "height": 400,
          "uri": "https://picsum.photos/600/400/?random",
          "width": 600,
        },
      ]
    }
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <BVLinearGradient
    colors={
      Array [
        1727692914,
        4294606962,
      ]
    }
    endPoint={
      Object {
        "x": 0,
        "y": 1,
      }
    }
    locations={
      Array [
        0,
        0.8,
      ]
    }
    overlayColor="salmon"
    overlayType="featured"
    startPoint={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`the GradientOverlayImage component should render with overlayType.gradient-bottom 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#A5A5A5",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    fadeDuration={250}
    onLoad={[Function]}
    source={
      Array [
        Object {
          "cache": "force-cache",
          "height": 400,
          "uri": "https://picsum.photos/600/400/?random",
          "width": 600,
        },
      ]
    }
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <BVLinearGradient
    colors={
      Array [
        1727692914,
        2163900530,
      ]
    }
    endPoint={
      Object {
        "x": 0,
        "y": 1,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    overlayColor="salmon"
    overlayType="gradient-bottom"
    startPoint={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`the GradientOverlayImage component should render with overlayType.gradient-top 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#A5A5A5",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    fadeDuration={250}
    onLoad={[Function]}
    source={
      Array [
        Object {
          "cache": "force-cache",
          "height": 400,
          "uri": "https://picsum.photos/600/400/?random",
          "width": 600,
        },
      ]
    }
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <BVLinearGradient
    colors={
      Array [
        2163900530,
        0,
      ]
    }
    endPoint={
      Object {
        "x": 0,
        "y": 1,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    overlayColor="salmon"
    overlayType="gradient-top"
    startPoint={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`the GradientOverlayImage component should render with overlayType.high 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#A5A5A5",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    fadeDuration={250}
    onLoad={[Function]}
    source={
      Array [
        Object {
          "cache": "force-cache",
          "height": 400,
          "uri": "https://picsum.photos/600/400/?random",
          "width": 600,
        },
      ]
    }
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <BVLinearGradient
    colors={
      Array [
        3875176562,
        3875176562,
      ]
    }
    endPoint={
      Object {
        "x": 0,
        "y": 1,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    overlayColor="salmon"
    overlayType="high"
    startPoint={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`the GradientOverlayImage component should render with overlayType.low 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#A5A5A5",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    fadeDuration={250}
    onLoad={[Function]}
    source={
      Array [
        Object {
          "cache": "force-cache",
          "height": 400,
          "uri": "https://picsum.photos/600/400/?random",
          "width": 600,
        },
      ]
    }
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <BVLinearGradient
    colors={
      Array [
        1727692914,
        1727692914,
      ]
    }
    endPoint={
      Object {
        "x": 0,
        "y": 1,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    overlayColor="salmon"
    overlayType="low"
    startPoint={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`the GradientOverlayImage component should render with overlayType.medium 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#A5A5A5",
      "overflow": "hidden",
      "width": "100%",
    }
  }
>
  <Image
    fadeDuration={250}
    onLoad={[Function]}
    source={
      Array [
        Object {
          "cache": "force-cache",
          "height": 400,
          "uri": "https://picsum.photos/600/400/?random",
          "width": 600,
        },
      ]
    }
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <BVLinearGradient
    colors={
      Array [
        2163900530,
        2163900530,
      ]
    }
    endPoint={
      Object {
        "x": 0,
        "y": 1,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    overlayColor="salmon"
    overlayType="medium"
    startPoint={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;
